bynkc/tests/fixtures/positive/155_state_sum_machine/src/signal.bynk
context signal

type Light = enum { Red, Green }

agent Signal {
  key id: String

  store colour: Cell[Light] = Red

  on call peek() -> Effect[Result[(), String]] {
    Ok(())
  }
}
