bynkc/tests/fixtures/negative/348_effect_result_unknown_method/input.bynk
commons demo.errm
fn src(id: Int) -> Effect[Result[Int, String]] { Effect.pure(Ok(id)) }
fn bad(id: Int) -> Effect[Result[Int, String]] {
  src(id).mapBoth((x: Int) => x)
}
